@@ -1506,4 +1506,15 @@ MRREVIEWER = {Attila Nagy},
        DOI = {10.1007/s00233-018-9922-9},
        URL = {https://doi.org/10.1007/s00233-018-9922-9},
 }
-	
+
+
+@article{nearly-almost,
+  title={Nearly Gorenstein vs almost Gorenstein affine monomial curves},
+  author={Moscariello, Alessio and Strazzanti, Francesco},
+  journal={Mediterranean Journal of Mathematics},
+  volume={18},
+  number={4},
+  pages={1--14},
+  year={2021},
+  publisher={Springer}
+}
